# pamsoft_grid_qt_rust_operator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  operator.json
.github/workflows/: ci.yml  release.yml
e2e_test/: .gitignore  README.md  requirements.txt  run.py
e2e_test/lib/: __init__.py  client.py  diff.py  results.py  runner.py  workflow.py
src/: algorithm.rs  download.rs  input.rs  lib.rs  main.rs  output.rs  props.rs  upload.rs
